# testdartffi

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/ws/yelo/testdartffi/: TestdartffiPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ws/yelo/testdartffi_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: testdartffi.podspec
ios/Classes/: SwiftTestdartffiPlugin.swift  TestdartffiPlugin.h  TestdartffiPlugin.m
lib/: myextensions.dart  testdartffi.dart
sayhellotouser/: CMakeLists.txt  sayhellotouser.c  test.c
sayhellotouser/hello/: CMakeLists.txt  hello.c
sayhellotouser/hello/include/: hello.h
sayhellotouser/include/: sayhellotouser.h
test/: testdartffi_test.dart
